# rtsp-backchannel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  RELEASING.md  SECURITY.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-16-library-packaging.md  2026-07-20-onvif-discovery-streams.md
python/: LICENSE  README.ko.md  README.md  THIRD_PARTY_NOTICES.md  backchannel_audio.py  backchannel_rtp.py  onvif_play.py  pyproject.toml  test_backchannel_audio.py  test_backchannel_rtp.py  test_library_api.py  test_onvif_library.py  test_onvif_play.py
python/onvif_backchannel/: __init__.py  cli.py
python/rtsp_backchannel/: cli.py  onvif.py  playback.py
rust/: Cargo.toml  LICENSE-MIT  README.ko.md  README.md
rust/src/: audio.rs  backchannel.rs  cli.rs  discovery.rs  lib.rs  main.rs  onvif.rs  playback.rs  rtp.rs  rtsp.rs  sdp.rs
rust/tests/: onvif_api.rs  public_api.rs
src/: audiocheck.ts  backchannel.test.ts  backchannel.ts  bin.ts  cli.test.ts  cli.ts  discover.ts  index.test.ts  index.ts  m1.test.ts  m1.ts  m3.test.ts  m3.ts  streams.ts
src/audio/: g711.test.ts  g711.ts  transcode.test.ts  transcode.ts
src/onvif/: deviceClient.test.ts  deviceClient.ts  discovery.test.ts  discovery.ts  streams.test.ts  streams.ts
src/rtp/: sender.test.ts  sender.ts
src/rtsp/: backchannelClient.test.ts  backchannelClient.ts  sdp.test.ts  sdp.ts
tools/: capture_gst_backchannel.py  compare_pcma_encoders.py  replay_rtp_reference.py  rtp_reference.py  run_rtp_pacer.py  summarize_send_timing.py
