[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onvif-backchannel"
version = "0.1.0"
description = "Discover ONVIF cameras, resolve RTSP streams, and play backchannel audio without GStreamer"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
onvif-backchannel = "onvif_backchannel.cli:main"

[tool.setuptools]
py-modules = ["backchannel_audio", "backchannel_rtp", "onvif_play"]

[tool.setuptools.packages.find]
where = ["."]
include = ["onvif_backchannel*"]
