[package]
name = "onvif-backchannel-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
md5 = "0.7"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.20"
sha1 = "0.10"
url = "2.5"
