[package]
name = "rtsp-backchannel"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "Discover ONVIF cameras, resolve RTSP streams, and play backchannel audio"
authors = ["GagaKor"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/GagaKor/rtsp-backchannel"
homepage = "https://github.com/GagaKor/rtsp-backchannel"
keywords = ["onvif", "rtsp", "audio", "rtp", "backchannel"]
categories = ["multimedia::audio", "network-programming"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
md5 = "0.8"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
url = "2.5"
